Details
-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.0.0
-
None
-
Windows 7, msvc 2010
-
e0d9fade038130ad408715e946c5c08cd2faf81e
Description
Windows: QClipboard autotest fails and crashes:
********* Start testing of tst_QClipboard ********* Config: Using QTest library 5.0.0, Qt 5.0.0 PASS : tst_QClipboard::initTestCase() PASS : tst_QClipboard::copy_exit_paste() PASS : tst_QClipboard::capabilityFunctions() PASS : tst_QClipboard::modes() FAIL! : tst_QClipboard::testSignals() Compared values are not the same Actual (changedSpy.count()): 2 Expected (1): 1 ..\tst_qclipboard.cpp(159) : failure location NMAKE : fatal error U1077: 'cd' : return code '0xc0000005' Stop.
Remember to enable the test in CI after it has been fixed.
Attachments
Issue Links
- is required for
-
QTBUG-24203 Qt 5.0 - Windows: Fix tests
-
- Closed
-